syntax = "proto3";
option java_multiple_files = true;
package com.example.order;

message ProtoOrder {
  string id = 1;
  string customerId = 2;
}

message ProtoOrderedItem{
  string itemId = 1;
  string orderId = 2;
}

message ProtoItem {
  string name = 1;
  double price = 2;
  int32 quantity = 3;
}

message ProtoCustomer {
  string customerId = 1;
  string firstName = 2;
  string lastName = 3;
}


message GetRequestOrder{

}

message GetResponseOrder {
  repeated ProtoOrder order = 1;
}


message GetRequestOrderedItem{

}

message GetResponseOrderedItem {
  repeated ProtoOrderedItem orderedItems = 1;
}


message CreateRequest{
  ProtoCustomer customer = 1;
  repeated ProtoItem items = 2;
}

message CreateResponse {
}


service orderService {
  rpc getOrder(GetRequestOrder) returns (GetResponseOrder);
  rpc getOrderedThing(GetRequestOrderedItem) returns (GetResponseOrderedItem);
  rpc create(CreateRequest) returns (CreateResponse);
}